--- a/main.html
+++ b/main.html
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <label for="grad-year-select" class="form-label">Graduation year</label>
+                    <label for="grad-year-select" class="form-label">Graduation Year</label>
                     <select name="year" id="grad-year-select" class="form-select" required>
                         <option value="" selected disabled>Choose...</option>
                         <option value="2020">2020</option>
@@ -65,7 +65,7 @@
                 <div class="col-12">
                     <div class="form-check has-validation">
                         <input type="checkbox" class="form-check-input condition-checkbox" id="conditions-checkbox" required>
-                        <label for="conditions-checkbox" class="form-check-label">Agree to term and conditions</label>
+                        <label for="conditions-checkbox" class="form-check-label">Agree to terms and conditions</label>
                         <div class="invalid-feedback">
                             You must agree before submitting.
                         </div>
